[WIP] add search by NI

--- a/app/views/searches/_form.html.haml
+++ b/app/views/searches/_form.html.haml
@@ -3,7 +3,7 @@
   = f.hidden_field(:filter, value: @filter)
   = f.govuk_text_field(:term, value: @term, label: { text: @label }, hint_text: @hint )
 
-  - if @filter.eql?('defendant')
+  - if @filter.eql?('defendant_name')
     = f.govuk_date_field :dob,
       legend: { text: t('search.dob.legend_text') },
       hint_text: t('search.dob.hint_text')
