--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -11,6 +11,11 @@
           = link_to t('layouts.application.header.navigation.manage_users'),
               users_path,
               class: 'govuk-header__link'
+      -if current_user.admin?
+        %li.govuk-header__navigation-item
+          = link_to t('layouts.application.header.navigation.sidekiq_console'),
+            sidekiq_web_path,
+            class: 'govuk-header__link'
     %li.govuk-header__navigation-item
       = link_to t('layouts.application.header.navigation.sign_out'),
           destroy_user_session_path,
