--- a/app/views/results/_prosecution_case.html.haml
+++ b/app/views/results/_prosecution_case.html.haml
@@ -4,14 +4,16 @@
   %thead.govuk-table__head
     %tr.govuk-table__row
       %th.govuk-table__header{ scope: 'col' }= t('search.result.defendant.name')
+      %th.govuk-table__header{ scope: 'col' }= t('search.result.defendant.prosecution_case_reference')
       %th.govuk-table__header{ scope: 'col' }= t('search.result.defendant.date_of_birth')
       %th.govuk-table__header{ scope: 'col' }= t('search.result.defendant.national_insurance_number')
-      %th.govuk-table__header{ scope: 'col' }= t('search.result.defendant.prosecution_case_reference')
+      %th.govuk-table__header{ scope: 'col' }= t('search.result.defendant.arrest_summons_number')
   %tbody.govuk-table__body
     - @results.each do |cse|
       - cse.defendants.each do |defendant|
         %tr.govuk-table__row
           %td.govuk-table__cell= defendant.name
+          %td.govuk-table__cell= cse.prosecution_case_reference
           %td.govuk-table__cell= l(defendant.date_of_birth&.to_date)
           %td.govuk-table__cell= defendant.national_insurance_number
-          %td.govuk-table__cell= cse.prosecution_case_reference
+          %td.govuk-table__cell= defendant.arrest_summons_number
