Add prosecution_case details page

--- a/app/views/results/_prosecution_case.html.haml
+++ b/app/views/results/_prosecution_case.html.haml
@@ -12,8 +12,13 @@
     - @results.each do |cse|
       - cse.defendants.each do |defendant|
         %tr.govuk-table__row
-          %td.govuk-table__cell= defendant.name
-          %td.govuk-table__cell= cse.prosecution_case_reference
-          %td.govuk-table__cell= l(defendant.date_of_birth&.to_date)
-          %td.govuk-table__cell= defendant.national_insurance_number
-          %td.govuk-table__cell= defendant.arrest_summons_number
+          %td.govuk-table__cell
+            = link_to defendant.name, defendant_path(defendant.arrest_summons_number || defendant.national_insurance_number)
+          %td.govuk-table__cell
+            = link_to cse.prosecution_case_reference, prosecution_case_path(cse.prosecution_case_reference)
+          %td.govuk-table__cell
+            = l(defendant.date_of_birth&.to_date)
+          %td.govuk-table__cell
+            = defendant.national_insurance_number
+          %td.govuk-table__cell
+            = defendant.arrest_summons_number
