--- a/app/views/results/_defendant.html.haml
+++ b/app/views/results/_defendant.html.haml
@@ -11,8 +11,13 @@
   %tbody.govuk-table__body
     - @results.each do |defendant|
       %tr.govuk-table__row
-        %td.govuk-table__cell= defendant.name
-        %td.govuk-table__cell= defendant.prosecution_case_reference
-        %td.govuk-table__cell= l(defendant.date_of_birth&.to_date)
-        %td.govuk-table__cell= defendant.national_insurance_number
-        %td.govuk-table__cell= defendant.arrest_summons_number
+        %td.govuk-table__cell
+          = link_to defendant.name, defendant_path(defendant.arrest_summons_number || defendant.national_insurance_number)
+        %td.govuk-table__cell
+          = link_to defendant.prosecution_case_reference, prosecution_case_path(defendant.prosecution_case_reference)
+        %td.govuk-table__cell
+          = l(defendant.date_of_birth&.to_date)
+        %td.govuk-table__cell
+          = defendant.national_insurance_number
+        %td.govuk-table__cell
+          = defendant.arrest_summons_number
