--- a/app/views/defendants/show.html.haml
+++ b/app/views/defendants/show.html.haml
@@ -2,26 +2,46 @@
 
 %table.govuk-table
   %caption.govuk-table__caption.govuk-visually-hidden
-    = t('search.result.caption')
+    = t('search.result.defendant.caption')
   %tbody.govuk-table__body
     %tr.govuk-table__row
-      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold'}
+      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
         = t('search.result.defendant.date_of_birth')
-      %td.govuk-table__cell= l(@defendant.date_of_birth&.to_date)
+      %td.govuk-table__cell
+        = l(@defendant.date_of_birth&.to_date)
     %tr.govuk-table__row
-      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold'}
+      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
         = t('search.result.defendant.prosecution_case_reference')
-      %td.govuk-table__cell= @defendant.prosecution_case_reference
+      %td.govuk-table__cell
+        = @defendant.prosecution_case_reference
     %tr.govuk-table__row
-      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold'}
+      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
         = t('search.result.defendant.national_insurance_number')
-      %td.govuk-table__cell= @defendant.national_insurance_number
+      %td.govuk-table__cell
+        = @defendant.national_insurance_number
     %tr.govuk-table__row
-      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold'}
+      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
         = t('search.result.defendant.arrest_summons_number')
-      %td.govuk-table__cell= @defendant.arrest_summons_number
+      %td.govuk-table__cell
+        = @defendant.arrest_summons_number
 
 .govuk-heading-m
   = t('search.result.offence.heading')
-  - @defendant.offences do |offence|
-    = offence
+
+%table.govuk-table
+  %caption.govuk-table__caption.govuk-visually-hidden
+    = t('search.result.offence.caption')
+  %thead.govuk-table__head
+    %tr.govuk-table__row
+      %th.govuk-table__header{ scope: 'col' }= t('search.result.offence.title')
+      %th.govuk-table__header{ scope: 'col' }= t('search.result.offence.plea')
+      %th.govuk-table__header{ scope: 'col' }= t('search.result.offence.mode_of_trial')
+  %tbody.govuk-table__body
+    - @defendant.offences.each do |offence|
+      %tr.govuk-table__row
+        %td.govuk-table__cell
+          = offence.title
+        %td.govuk-table__cell
+          Not yet available
+        %td.govuk-table__cell
+          = offence.mode_of_trial
