--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -39,20 +39,7 @@
     .govuk-width-container
       = render 'layouts/phase_banner'
 
-      / <div class="govuk-breadcrumbs">
-      /   <ol class="govuk-breadcrumbs__list">
-      /     <li class="govuk-breadcrumbs__list-item">
-      /       <a class="govuk-breadcrumbs__link" href="#">Home</a>
-      /     </li>
-      /     <li class="govuk-breadcrumbs__list-item">
-      /       <a class="govuk-breadcrumbs__link" href="#">Passports, travel and living abroad</a>
-      /     </li>
-      /     <li class="govuk-breadcrumbs__list-item" aria-current="page">Travel abroad</li>
-      /   </ol>
-      / </div>
-      .govuk-breadcrumbs
-        %ol.govuk-breadcrumbs__list
-          = render_breadcrumbs(tag: 'li class="govuk-breadcrumbs__list-item"', separator: '')
+      = render_breadcrumbs(builder: govuk_breadcrumb_builder)
 
       %main#main-content.govuk-main-wrapper{role: "main"}
         = render partial: 'layouts/flashes' unless flash.empty?
