--- a/app/views/defendants/show.html.haml
+++ b/app/views/defendants/show.html.haml
@@ -13,7 +13,7 @@
       %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
         = t('search.result.defendant.prosecution_case_reference')
       %td.govuk-table__cell
-        = @defendant.prosecution_case_reference
+        = link_to @defendant.prosecution_case_reference, prosecution_case_path(@defendant.prosecution_case_reference)
     %tr.govuk-table__row
       %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
         = t('search.result.defendant.national_insurance_number')
