add basic linking form and authorization

--- a/app/views/defendants/show.html.haml
+++ b/app/views/defendants/show.html.haml
@@ -45,3 +45,5 @@
           Not yet available
         %td.govuk-table__cell
           = offence.mode_of_trial
+
+= render 'laa_references/form', locals: @defendant
