Amend search filter page
Remove page title and hint, and modify field
label inline with designs.

--- a/app/views/search_filters/_form.html.haml
+++ b/app/views/search_filters/_form.html.haml
@@ -5,8 +5,6 @@
     Search.filters,
     :id,
     :name,
-    :description,
-    legend: { text: t('search_filter.legend_text'), size: 'xl' },
-    hint_text: t('search_filter.label_hint')
+    legend: { text: t('search_filter.legend_text'), size: 'xl' }
 
   = f.govuk_submit( t('generic.continue') )
