Add cookies page

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -4,19 +4,23 @@
       .govuk-footer__meta-item.govuk-footer__meta-item--grow
         %h2.govuk-visually-hidden
           = t('layouts.application.footer.support')
+
         %ul.govuk-footer__inline-list
           %li.govuk-footer__inline-list-item
             %a.govuk-footer__link{href: "#1"}
               = t('layouts.application.footer.help')
+
           %li.govuk-footer__inline-list-item
-            %a.govuk-footer__link{href: "#2"}
-              = t('layouts.application.footer.cookies')
+            = link_to t('layouts.application.footer.cookies'), cookies_path, class: 'govuk-footer__link'
+
           %li.govuk-footer__inline-list-item
             %a.govuk-footer__link{href: "#3"}
               = t('layouts.application.footer.contact')
+
           %li.govuk-footer__inline-list-item
             %a.govuk-footer__link{href: "#4"}
               = t('layouts.application.footer.terms')
+
           %li.govuk-footer__inline-list-item
             = t('layouts.application.footer.built_by_html')
 
