--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,6 +25,9 @@
       document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
     %a.govuk-skip-link{href: "#main-content"}
       = t('layouts.application.skip_content')
+
+    = render partial: 'layouts/cookie_banner'
+
     %header.govuk-header{"data-module" => "govuk-header", role: "banner"}
       .govuk-header__container.govuk-width-container
         .govuk-header__logo
