Add cookie functions

--- a/app/views/layouts/_google_analytics.html.haml
+++ b/app/views/layouts/_google_analytics.html.haml
@@ -1,7 +1,2 @@
-%script{ async: '', src: "https://www.googletagmanager.com/gtag/js?id=#{ENV['GA_TRACKING_ID']}" }
-
 :javascript
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', "#{ENV['GA_TRACKING_ID']}", { 'anonymize_ip': true });
+  let googleTrackingID = "#{ENV['GA_TRACKING_ID']}"
