simplify maat reference linked status call in view

--- a/app/views/prosecution_cases/show.html.haml
+++ b/app/views/prosecution_cases/show.html.haml
@@ -19,7 +19,4 @@
           %td.govuk-table__cell
             = l(defendant.date_of_birth&.to_date)
           %td.govuk-table__cell
-            - if defendant.linked?
-              = 'TODO: retrieve MAAT reference'
-            - else
-              = t('search.result.defendant.unlinked')
+            = defendant.maat_reference || t('search.result.defendant.unlinked')
