--- a/app/views/defendants/show.html.haml
+++ b/app/views/defendants/show.html.haml
@@ -24,26 +24,18 @@
         = t('search.result.defendant.arrest_summons_number')
       %td.govuk-table__cell
         = @defendant.arrest_summons_number
-
-.govuk-heading-m
-  = t('search.result.offence.heading')
-
-%table.govuk-table
-  %caption.govuk-table__caption.govuk-visually-hidden
-    = t('search.result.offence.caption')
-  %thead.govuk-table__head
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'col' }= t('search.result.offence.title')
-      %th.govuk-table__header{ scope: 'col' }= t('search.result.offence.plea')
-      %th.govuk-table__header{ scope: 'col' }= t('search.result.offence.mode_of_trial')
-  %tbody.govuk-table__body
-    - @defendant.offences.each do |offence|
+    - if @defendant.linked?
       %tr.govuk-table__row
+        %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
+          = t('search.result.defendant.maat_number')
         %td.govuk-table__cell
-          = offence.title
-        %td.govuk-table__cell
-          Not yet available
-        %td.govuk-table__cell
-          = offence.mode_of_trial
+          = @defendant.maat_reference
 
-= render 'laa_references/form', locals: @defendant
+= render('representation_orders', locals: @defendant) if @defendant.linked?
+
+= render 'offences', locals: @defendant
+
+= render 'laa_references/unlink', locals: @defendant if @defendant.linked?
+
+= render('laa_references/form', locals: @defendant) unless @defendant.linked?
+
