--- a/app/views/laa_references/_form.html.haml
+++ b/app/views/laa_references/_form.html.haml
@@ -4,7 +4,7 @@
 
   = f.govuk_text_field :maat_reference,
     value: nil,
-    label: { text: t('laa_reference.maat_reference.label') },
-    hint_text: t('laa_reference.maat_reference.hint')
+    label: { text: t('laa_reference.link.form.maat_reference.label') },
+    hint_text: t('laa_reference.link.form.maat_reference.hint')
 
-  = f.govuk_submit(t('laa_reference.submit'))
+  = f.govuk_submit(t('laa_reference.link.form.submit'))
