WIP unlink case by deleting 'laa reference'
This commit is WIP because:
- I'm not confident the right request is being sent to the adaptor
- I've removed a relation and it may have side effects
- The tests have some clarity issues

--- a/app/views/laa_references/_unlink.html.haml
+++ b/app/views/laa_references/_unlink.html.haml
@@ -1,4 +1,4 @@
-= link_to t('laa_reference.unlink.label'), '', class: 'govuk-link'
+= link_to t('laa_reference.unlink.label'), remove_link_defendant_path(@defendant.arrest_summons_number), method: :delete, class: 'govuk-link'
 %br
 %br
 .govuk-warning-text
