--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -12,6 +12,11 @@
         = @user.name
     %tr.govuk-table__row
       %th.govuk-table__header{ scope: 'row' }
+        = t('users.show.username_label')
+      %td.govuk-table__cell
+        = @user.username
+    %tr.govuk-table__row
+      %th.govuk-table__header{ scope: 'row' }
         = t('users.show.email_label')
       %td.govuk-table__cell
         = mail_to @user.email, class: 'govuk-link', target: '_blank' do
