Change unlink method to a patch
A RESTful approach to unlinking

Note: The adaptor will not corece a json string
of an integer into an integer since json
is capable of storing both string and integer.
We should there avoid problems by sending an
integer for the reason code.

see [dry-validation json schemas](https://dry-rb.org/gems/dry-validation/1.5/schemas/#defining-a-schema-with-json-coercion)

--- a/app/views/laa_references/_unlink.html.haml
+++ b/app/views/laa_references/_unlink.html.haml
@@ -1,4 +1,22 @@
-= link_to t('laa_reference.unlink.label'), remove_link_defendant_path(@defendant.arrest_summons_number), method: :delete, class: 'govuk-link'
+%details.govuk-details{ 'data-module': 'govuk-details' }
+  %summary.govuk-details__summary
+    %span.govuk-details__summary-text
+      = t('laa_reference.unlink.detail_link')
+  .govuk-details__text
+    %p
+    = form_with(url: defendant_path(@defendant.arrest_summons_number), local: true, method: 'patch') do |f|
+      = f.govuk_collection_select :unlink_reason_code,
+        @unlink_reasons,
+        :code,
+        :description,
+        options: { include_blank: t('generic.form.select.blank_option') },
+        label: { text: t('laa_reference.unlink.form.code.label') }
+
+      = f.govuk_text_field :unlink_other_reason_text,
+        label: { text: t('laa_reference.unlink.form.other_reason_text.label') }
+
+      = f.govuk_submit(t('laa_reference.unlink.form.submit'))
+
 %br
 %br
 .govuk-warning-text
