--- a/app/views/results/_prosecution_case.html.haml
+++ b/app/views/results/_prosecution_case.html.haml
@@ -13,7 +13,7 @@
       - cse.defendants.each do |defendant|
         %tr.govuk-table__row
           %td.govuk-table__cell
-            = link_to defendant.name, defendant_path(defendant.arrest_summons_number || defendant.national_insurance_number)
+            = link_to defendant.name, edit_defendant_path(defendant.arrest_summons_number || defendant.national_insurance_number)
           %td.govuk-table__cell
             = link_to cse.prosecution_case_reference, prosecution_case_path(cse.prosecution_case_reference)
           %td.govuk-table__cell
