--- a/app/views/laa_references/_unlink.html.haml
+++ b/app/views/laa_references/_unlink.html.haml
@@ -1,4 +1,4 @@
-%details.govuk-details{ 'data-module': 'govuk-details', 'open': '' }
+%details.govuk-details{ 'data-module': 'govuk-details' }
   %summary.govuk-details__summary
     %span.govuk-details__summary-text
       = t('laa_reference.unlink.detail_link')
