--- a/app/views/defendants/edit.html.haml
+++ b/app/views/defendants/edit.html.haml
@@ -3,37 +3,7 @@
 - content_for :custom_packs do
   = javascript_pack_tag 'unlink', defer: true
 
-%table.govuk-table
-  %caption.govuk-table__caption.govuk-visually-hidden
-    = t('search.result.defendant.caption')
-  %tbody.govuk-table__body
-    %tr.govuk-table__row
-      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
-        = t('search.result.defendant.date_of_birth')
-      %td.govuk-table__cell
-        = l(@defendant.date_of_birth&.to_date)
-    %tr.govuk-table__row
-      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
-        = t('search.result.defendant.prosecution_case_reference')
-      %td.govuk-table__cell
-        = @defendant.prosecution_case_reference
-    %tr.govuk-table__row
-      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
-        = t('search.result.defendant.national_insurance_number')
-      %td.govuk-table__cell
-        = @defendant.national_insurance_number
-    %tr.govuk-table__row
-      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
-        = t('search.result.defendant.arrest_summons_number')
-      %td.govuk-table__cell
-        = @defendant.arrest_summons_number
-
-= link_to 'View case', prosecution_case_path(@defendant.prosecution_case_reference), class: 'govuk-button govuk-button--secondary'
-
-= render('representation_orders', locals: @defendant) if @defendant.linked?
-
-= render 'offences', locals: @defendant
-
-= render('defendants/unlink', locals: @defendant) if @defendant.linked?
-
-= render('laa_references/form', locals: @defendant) unless @defendant.linked?
+- if @defendant.linked?
+  = render('defendants/form', locals: @defendant)
+- else
+  = render('laa_references/form', locals: @defendant)
