--- a/app/views/laa_references/_form.html.haml
+++ b/app/views/laa_references/_form.html.haml
@@ -1,4 +1,9 @@
 = form_with(url: '/laa_references', local: true) do |f|
+
+  = render 'defendant', locals: @defendant
+
+  = render 'offences', locals: @defendant
+
   = f.hidden_field(:id, value: params[:id])
   = f.hidden_field(:defendant_id, value: @defendant.id)
 
