--- a/app/views/defendants/_link_form.html.haml
+++ b/app/views/defendants/_link_form.html.haml
@@ -1,13 +1,13 @@
-= form_with(model: @link_attempt, url: '/laa_references', local: true) do |f|
-  - if @link_attempt
-    =f.govuk_error_summary
+= form_with(model: @link_attempt, url: defendants_path, local: true) do |f|
+  =f.govuk_error_summary
+
+  = f.hidden_field(:id, value: params[:id])
+  = f.hidden_field(:defendant_id, value: @defendant.id)
+  = f.hidden_field(:defendant_asn, value: @defendant_asn)
 
   = render 'defendants/defendant'
 
   = render 'defendants/offences'
-
-  = f.hidden_field(:id, value: params[:id])
-  = f.hidden_field(:defendant_id, value: @defendant.id)
 
   = f.govuk_text_field :maat_reference,
     value: nil,
