--- a/app/views/defendants/_defendant.html.haml
+++ b/app/views/defendants/_defendant.html.haml
@@ -3,22 +3,22 @@
     = t('search.result.defendant.caption')
   %tbody.govuk-table__body
     %tr.govuk-table__row
-      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
+      %th.govuk-table__header{ scope: 'row' }
         = t('search.result.defendant.date_of_birth')
       %td.govuk-table__cell
         = l(@defendant.date_of_birth&.to_date)
     %tr.govuk-table__row
-      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
+      %th.govuk-table__header{ scope: 'row' }
         = t('search.result.defendant.prosecution_case_reference')
       %td.govuk-table__cell
         = @prosecution_case_reference
     %tr.govuk-table__row
-      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
+      %th.govuk-table__header{ scope: 'row' }
         = t('search.result.defendant.national_insurance_number')
       %td.govuk-table__cell
         = @defendant.national_insurance_number
     %tr.govuk-table__row
-      %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
+      %th.govuk-table__header{ scope: 'row' }
         = t('search.result.defendant.arrest_summons_number')
       %td.govuk-table__cell
         = @defendant.arrest_summons_number
