--- a/app/views/laa_references/_form.html.haml
+++ b/app/views/laa_references/_form.html.haml
@@ -5,9 +5,8 @@
 
   = render 'defendants/offences'
 
-  = f.hidden_field(:id, value: params[:id])
+  = f.hidden_field(:defendant_asn_or_nino, value: (params[:id] || @defendant_asn_or_nino))
   = f.hidden_field(:defendant_id, value: @defendant.id)
-  = f.hidden_field(:defendant_identifier, value: @defendant_identifier)
 
   = f.govuk_text_field :maat_reference,
     label: { text: t('laa_reference.link.form.maat_reference.label') },
