Cbo 1358 apply error handling designs for linking v3 (#216)
* Using new laa references controller SPIKE

* Add Link Attempt model and associated validations

* Fix broken specs

Fix more specs

Fix more specs

Fix more specs

Fix more specs

Fix more specs

Fix more specs

Fix some rubocop warnings

Fix more specs

Fix more specs

Fix spec

Tweak laa_references_controller

Remove value nil from maat reference field

* Make changes requested in pull request

Fix rubocop warnings

Tweak laa_reference_params

* Make further changes requested in pr

Fix rubocop warnings

Rename defendant_helper defendant_searchable

Test commit

Fix rubocop warnings

Rename defendant_link_helper

rename defendant_link_helper defendant_helper

Redirect to defendant_identifier

Revert breaking change

Co-authored-by: jsugarman <joel.sugarman@digital.justice.gov.uk>

--- a/app/views/laa_references/_form.html.haml
+++ b/app/views/laa_references/_form.html.haml
@@ -1,14 +1,14 @@
-= form_with(url: '/laa_references', local: true) do |f|
+= form_with(model: @link_attempt, url: '/laa_references', local: true) do |f|
+  = f.govuk_error_summary
 
   = render 'defendants/defendant'
 
   = render 'defendants/offences'
 
-  = f.hidden_field(:id, value: params[:id])
+  = f.hidden_field(:defendant_asn_or_nino, value: (params[:id] || @defendant_asn_or_nino))
   = f.hidden_field(:defendant_id, value: @defendant.id)
 
   = f.govuk_text_field :maat_reference,
-    value: nil,
     label: { text: t('laa_reference.link.form.maat_reference.label') },
     hint_text: t('laa_reference.link.form.maat_reference.hint')
 
