Attempt to consume defendants court_data_adaptor endpoint
Carry on trying to use defendants api endpoint

Add more stuff

add some more stuff

Remove changes added in error

--- a/app/views/defendants/_defendant.html.haml
+++ b/app/views/defendants/_defendant.html.haml
@@ -23,4 +23,4 @@
       %td.govuk-table__cell
         = @defendant.arrest_summons_number
 
-= link_to 'View case', prosecution_case_path(@defendant.prosecution_case_reference), class: 'govuk-button govuk-button--secondary'
+= link_to 'View case', prosecution_case_path(@defendant.id), class: 'govuk-button govuk-button--secondary'
