--- a/app/views/laa_references/_form.html.haml
+++ b/app/views/laa_references/_form.html.haml
@@ -5,6 +5,8 @@
 
   = render 'defendants/offences'
 
+  = hidden_field_tag(:urn, params[:urn])
+
   = f.hidden_field(:defendant_id, value: (params[:id] || @defendant_uuid))
 
   = f.govuk_text_field :maat_reference,
