--- a/app/views/laa_references/new.html.haml
+++ b/app/views/laa_references/new.html.haml
@@ -1,3 +1,3 @@
 = govuk_page_title(@defendant.name, t('generic.defendant'))
 
-= render('laa_references/form', locals: @defendant)
+= render('laa_references/form')
