--- a/app/views/defendants/_form.html.haml
+++ b/app/views/defendants/_form.html.haml
@@ -7,7 +7,7 @@
 
   = render 'defendants/offences'
 
-  = hidden_field_tag(:urn, params[:run])
+  = hidden_field_tag(:urn, params[:urn])
 
   = govuk_detail(t('defendants.unlink.detail'), @unlink_attempt.errors.present?) do
     = f.govuk_collection_select :reason_code,
