Cbo 1376 use UUID instead of asn or nino v2 (#231)
* Use id instead of asn or nino in defendant_helper

* Update defendant_serachable to use defendant uuid not asn or nino

* Redirect to defendant_identifier in laa_references_controller.rb

* Remove defendant_asn_or_nino from laa_references_controller

* Add defendant_uuid search filter to search model

* Add court data adaptor query by_uuid

Add by_uuid to court_data_adaptor query

add by_uuid to search_spec

* Search on defendant_uuid instead of defendant_reference

Amend redirect paths in specs

Tweak defendant concern

Remove defendant_id param

* Attempt to consume defendants court_data_adaptor endpoint

Carry on trying to use defendants api endpoint

Add more stuff

add some more stuff

Remove changes added in error

* Remove defendant_by_uuid

* Remove defendant_searchable

Add defendant_searcher service object

Restrict cancan ability

* Fix specs

Fix defendant request spec

Fix specs

Fix specs

Fix specs

* Fix breadcrumbs spec

* Fix specs

Remove case breadcrumb

* Fix unlinked_defendant_flow_spec

* Fix rubocop rubocop Metrics/AbcSize warning

* Fix stubbed linking and unlinking specs

* Make changes requested in pr

* Add by_uuid

* Fix specs to use by_uuid

* Add by_uuid_spec

* Get breadcrumbs working

* fix param name typo

* renable breadcrumb feature spec

* remove reliance on instance variable defendant_uuid directly

* Fix all the specs broken by the breadcrumb fix

* Fix rubocop warnings

Co-authored-by: jsugarman <joel.sugarman@digital.justice.gov.uk>

--- a/app/views/defendants/_defendant.html.haml
+++ b/app/views/defendants/_defendant.html.haml
@@ -11,7 +11,7 @@
       %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
         = t('search.result.defendant.prosecution_case_reference')
       %td.govuk-table__cell
-        = @defendant.prosecution_case_reference
+        = @prosecution_case_reference
     %tr.govuk-table__row
       %td.govuk-table__cell{ class: 'govuk-!-font-weight-bold' }
         = t('search.result.defendant.national_insurance_number')
@@ -23,4 +23,4 @@
       %td.govuk-table__cell
         = @defendant.arrest_summons_number
 
-= link_to 'View case', prosecution_case_path(@defendant.prosecution_case_reference), class: 'govuk-button govuk-button--secondary'
+= link_to 'View case', prosecution_case_path(@prosecution_case_reference), class: 'govuk-button govuk-button--secondary'
