--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -63,12 +63,13 @@
         %td.govuk-table__cell
           = event.description
 
-%br
-%br
-= govuk_detail('View raw data') do
-  %h3='Hearings'
-  %pre
-    = JSON.pretty_generate(@hearing.attributes)
-  %h3='Hearing events'
-  %pre
-    = JSON.pretty_generate(@hearing.hearing_events.map(&:attributes))
+- if Rails.configuration.x.display_raw_responses
+  %br
+  %br
+  = govuk_detail('View raw data') do
+    %h3='Hearings'
+    %pre
+      = JSON.pretty_generate(@hearing.attributes)
+    %h3='Hearing events'
+    %pre
+      = JSON.pretty_generate(@hearing.hearing_events.map(&:attributes))
