--- a/app/views/prosecution_cases/show.html.haml
+++ b/app/views/prosecution_cases/show.html.haml
@@ -42,7 +42,7 @@
               = hearing_summary.hearing_type
             %td.govuk-table__cell
               - hearing = prosecution_case.hearings.find { |h| h.id == hearing_summary.id}
-              = hearing&.defence_advocate_names&.join(', ') || 'not set'
+              = hearing&.defence_advocate_names&.join(', ') || t('generic.not_available')
 
 - if Rails.configuration.x.display_raw_responses
   %br
