--- a/app/views/defendants/_form.html.haml
+++ b/app/views/defendants/_form.html.haml
@@ -9,7 +9,7 @@
 
   = hidden_field_tag(:urn, params[:urn])
 
-  = govuk_detail(t('defendants.unlink.detail'), @unlink_attempt.errors.present?) do
+  = govuk_detail(t('defendants.unlink.detail'), open: @unlink_attempt.errors.present?) do
     = f.govuk_collection_select :reason_code,
       @unlink_reasons,
       :code,
