Upgrade hint_text
Replace `hint_text: 'blah'` with `hint: { text: 'blah' }`

--- a/app/views/defendants/_form.html.haml
+++ b/app/views/defendants/_form.html.haml
@@ -19,7 +19,7 @@
 
     = f.govuk_text_area :other_reason_text,
       label: { text: t('defendants.form.other_reason_text.label') },
-      hint_text: t('defendants.form.other_reason_text.hint'),
+      hint: { text: t('defendants.form.other_reason_text.hint') },
       rows: 5,
       max_chars: 500
 
