--- a/app/views/laa_references/_form.html.haml
+++ b/app/views/laa_references/_form.html.haml
@@ -11,7 +11,7 @@
 
   = f.govuk_text_field :maat_reference,
     label: { text: t('laa_reference.link.form.maat_reference.label') },
-    hint_text: t('laa_reference.link.form.maat_reference.hint')
+    hint: { text: t('laa_reference.link.form.maat_reference.hint') }
 
   = f.govuk_submit(t('laa_reference.link.form.submit'))
 
