Display provider role in views
Designs want the role of the provider displayed
in the hearing summary (case details page) and
the hearing details page.

--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -31,12 +31,13 @@
       %th.govuk-table__header{ scope: 'row' }
         = t('hearings.show.attendees.defendants')
       %td.govuk-table__cell
-        = @hearing&.defendant_names&.join(', ') || t('generic.not_available')
+        = @hearing&.defendant_names&.join('<br>').html_safe || t('generic.not_available')
     %tr.govuk-table__row
       %th.govuk-table__header{ scope: 'row' }
         = t('hearings.show.attendees.defence')
       %td.govuk-table__cell
-        = @hearing&.defence_advocate_names&.join(', ') || t('generic.not_available')
+        - providers = @hearing.providers.map { |p| "#{p.name} (#{p.role})" }.join('<br>').html_safe
+        = providers || t('generic.not_available')
     %tr.govuk-table__row
       %th.govuk-table__header{ scope: 'row' }
         = t('hearings.show.attendees.prosecution')
