--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -37,8 +37,8 @@
       %th.govuk-table__header{ scope: 'row' }
         = t('hearings.show.attendees.defence')
       %td.govuk-table__cell
-        - providers = safe_join(@hearing&.providers&.map { |p| "#{p.name} (#{p.role})" }, tag(:br))
-        = providers.present? ? providers : t('generic.not_available')
+        - provider_list = @hearing&.providers&.map(&:name_and_role)
+        = provider_list.present? ? safe_join(provider_list, tag(:br)) : t('generic.not_available')
     %tr.govuk-table__row
       %th.govuk-table__header{ scope: 'row' }
         = t('hearings.show.attendees.prosecution')
