--- a/app/views/prosecution_cases/show.html.haml
+++ b/app/views/prosecution_cases/show.html.haml
@@ -42,8 +42,8 @@
               = hearing_summary.hearing_type
             %td.govuk-table__cell
               - hearing = prosecution_case.hearings.find { |h| h.id == hearing_summary.id}
-              - providers = safe_join(hearing.providers.map { |p| "#{p.name} (#{p.role})" }, tag(:br))
-              = providers.present? ? providers : t('generic.not_available')
+              - provider_list = hearing&.providers&.map(&:name_and_role)
+              = provider_list.present? ? safe_join(provider_list, tag(:br)) : t('generic.not_available')
 
 - if Rails.configuration.x.display_raw_responses
   %br
