Add offence mode of trial and plea to defendant view
The mode of trial is required information for caseworkers
as it impacts claimable fee values.

Plea has been added because the adaptor now exposes it.

--- a/app/views/defendants/_offences.html.haml
+++ b/app/views/defendants/_offences.html.haml
@@ -15,6 +15,8 @@
         %td.govuk-table__cell
           = offence.title
         %td.govuk-table__cell
-          Not yet available
+          = offence.plea || t('generic.not_available')
         %td.govuk-table__cell
-          = offence.mode_of_trial
+          = "#{offence.mode_of_trial}:"
+          %br
+          = offence.mode_of_trial_reason || t('generic.not_available')
