Display plea and date of plea for defendant offence
Need by caseworkers. Note that the adaptor
still needs to be amended to include changes
of plea in which case this is likely to change.

--- a/app/views/defendants/_offences.html.haml
+++ b/app/views/defendants/_offences.html.haml
@@ -15,7 +15,7 @@
         %td.govuk-table__cell
           = offence.title
         %td.govuk-table__cell
-          = offence.plea || t('generic.not_available')
+          = offence.plea_and_date || t('generic.not_available')
         %td.govuk-table__cell
           = "#{offence.mode_of_trial}:"
           %br
