--- a/app/views/defendants/_offences.html.haml
+++ b/app/views/defendants/_offences.html.haml
@@ -10,12 +10,12 @@
       %th.govuk-table__header{ scope: 'col' }= t('search.result.offence.plea')
       %th.govuk-table__header{ scope: 'col' }= t('search.result.offence.mode_of_trial')
   %tbody.govuk-table__body
-    - @defendant.offences.each do |offence|
+    - decorate_each(@defendant.offences) do |offence|
       %tr.govuk-table__row
         %td.govuk-table__cell
           = offence.title || t('generic.not_available')
         %td.govuk-table__cell
-          = offence.plea_and_date || t('generic.not_available')
+          = offence.plea_list
         %td.govuk-table__cell
           = "#{offence.mode_of_trial}:"
           %br
