--- a/app/views/defendants/_offences.html.haml
+++ b/app/views/defendants/_offences.html.haml
@@ -19,4 +19,4 @@
         %td.govuk-table__cell
           = "#{offence.mode_of_trial}:"
           %br
-          = offence.mode_of_trial_reason || t('generic.not_available')
+          = offence.mode_of_trial_reasons
